[package]
name = "freqshow"
version = "0.2.1"
edition = "2021"
authors = ["Sam Beskur <sam.beskur@gmail.com>"]
categories = ["computer-vision", "visualization"]
description = "A simple tool to visualize the frequency spectrum of an image using Rust."
documentation = "https://github.com/sjbeskur/freqshow/"
homepage = "https://github.com/sjbeskur/freqshow/"
keywords = ["fft", "cli", "image-processing", "visualization", "rust"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/sjbeskur/freqshow/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["target", "examples/freq_out.rs", "notebooks"]

[dependencies]
rustfft ="6.1.0"
image = "0.25.9"

[dev-dependencies]
show-image = "0.14"


[[example]]
name = "freq_out"
